--- a/index.Rmd
+++ b/index.Rmd
@@ -3,16 +3,13 @@
 ## thesis metadata ##
 #####################
 title: |
-  `oxforddown`: \
-  An Oxford University Thesis \
-  Template for R Markdown
-author: Author Name
-college: Your College
-university: University of Oxford
-university-logo: templates/beltcrest.pdf
+  Targeted HIV intervention with Bayesian spatio-temporal statistics
+author: Adam Howes
+university: Imperial College London
+university-logo: templates/ic.pdf
 submitted-text: A thesis submitted for the degree of
 degree: Doctor of Philosophy
-degreedate: Michaelmas 2018
+degreedate: 2023
 abstract: |
   `r paste(readLines("front-and-back-matter/_abstract.Rmd"), collapse = '\n  ')`
 acknowledgements: |
@@ -81,7 +78,7 @@ linespacing: 22pt plus2pt # 22pt is official for submission & library copies
 frontmatter-linespacing: 17pt plus1pt minus1pt #spacing in roman-numbered pages (acknowledgments, table of contents, etc.)
 
 ### other stuff ###
-abstractseparate: true  # include front page w/ abstract for examination schools?
+abstractseparate: false  # include front page w/ abstract for examination schools?
 hidelinks: true # false to highlight clickable links with a colored border
 
 ### citation and bibliography style ###
@@ -89,16 +86,14 @@ bibliography-heading-in-pdf: Works Cited
 
 # biblatex options #
 # unless you run into 'biber' error messages, use natbib as it lets you customise your bibliography directly
-use-biblatex: true
+use-biblatex: false
 bib-latex-options: "style=authoryear, sorting=nyt, backend=biber, maxcitenames=2, useprefix, doi=true, isbn=false, uniquename=false" #for science, you might want style=numeric-comp, sorting=none for numerical in-text citation with references in order of appearance
 
 # natbib options #
 # natbib runs into fewer errors than biblatex, but to customise your bibliography you need to fiddle with .bst files
-use-natbib: false # to use natbib, set this to true, and change "output:bookdown::pdf_book:citation_package:" to "natbib"
+use-natbib: true # to use natbib, set this to true, and change "output:bookdown::pdf_book:citation_package:" to "natbib"
 natbib-citation-style: authoryear #for science, you might want numbers,square
 natbib-bibliography-style: ACM-Reference-Format #or plainnat or some .bst file you download
-
-
 
 #####################
 ## output options  ##
