--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ title: |
   Targeted HIV intervention with Bayesian spatio-temporal statistics
 author: Adam Howes
 university: Imperial College London
-university-logo: templates/ic.pdf
+university-logo: templates/ic-small.pdf
 submitted-text: A thesis submitted for the degree of
 degree: Doctor of Philosophy
 degreedate: 2023
