Add abbreviations and notation from first mini-project

--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -1,11 +1,34 @@
+%tibble(
+%  Term = c("HIV"),
+%  Abbreviation = C("Human Immunodeficiency Virus")
+%  ) %>%
+%  arrange(Term) %>%
+%  kable(booktab = TRUE, escape = FALSE, "latex")
+
 % First parameter can be changed eg to "Glossary" or something.
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{List of Abbreviations}{3.2cm}
 
-\item[1-D, 2-D] One- or two-dimensional, referring in this thesis to spatial dimensions in an image.
-
-\item[Otter] One of the finest of water mammals.
-
-\item[Hedgehog] Quite a nice prickly friend.
+\item[HIV] Human Immunodeficiency Virus.
+\item[AIDS] Acquired Immune Deficiency Syndrome.
+\item[PEPFAR] President’s Emergency Plan for AIDS Relief.
+\item[HIV] Demographic and Health Surveys.
+\item[AIS] AIDS Indicator Survey.
+\item[MCMC] Markov Chain Monte Carlo.
+\item[INLA] Integrated Nested Laplace Approximation.
+\item[GP] Gaussian Process.
+\item[CAR] Conditionally Auto-regressive.
+\item[ANC] Antenatal Clinic.
+\item[ART] Antiretroviral Therapy.
+\item[UNAIDS] United Nations Joint Programme on HIV/AIDS.
+\item[CDC] Centers for Disease Control and Prevention.
+\item[UAT] Unlinked Anonymous Testing.
+\item[PMTCT] Prevention of Mother-to-Child Transmission.
+\item[PLHIV] People Living with HIV.
+\item[MPES] Multi-parameter Evidence Synthesis.
+\item[VI] Variational Inference.
+\item[SAE] Small Area Estimation.
+\item[GMRF] Gaussian Markov Random Field.
+\item[HMC] Hamiltonian Monte Carlo.
 
 \end{mclistof} 
