--- a/index.Rmd
+++ b/index.Rmd
@@ -16,6 +16,7 @@ acknowledgements: |
   `r paste(readLines("front-and-back-matter/_acknowledgements.Rmd"), collapse = '\n  ')`
 dedication: For Yihui Xie
 abbreviations: "front-and-back-matter/abbreviations" # path to .tex file with abbreviations
+notation: "front-and-back-matter/notation"
 
 #######################
 ## bibliography path ##
