--- a/templates/template.tex
+++ b/templates/template.tex
@@ -326,6 +326,11 @@ $if(abbreviations)$
 \include{$abbreviations$}
 $endif$
 
+%%%%% LIST OF NOTATION
+$if(notation)$
+\include{$notation$}
+$endif$
+
 % The Roman pages, like the Roman Empire, must come to its inevitable close.
 \end{romanpages}
 
