--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -1,4 +1,4 @@
-\begin{mclistof}{List of Notation}{3.2cm}
+\begin{mclistof}{List of Notations}{3.2cm}
 
 \item[$\rho$] HIV prevalence.
 \item[$\alpha$] ART coverage.
