--- a/templates/template.tex
+++ b/templates/template.tex
@@ -327,8 +327,8 @@ $if(abbreviations)$
 $endif$
 
 %%%%% LIST OF NOTATION
-$if(notation)$
-\include{$notation$}
+$if(notations)$
+\include{$notations$}
 $endif$
 
 % The Roman pages, like the Roman Empire, must come to its inevitable close.
