Start adding some content to the template

--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -1,9 +1,10 @@
 # Welcome {-}
 
+This is the e-book version of my PhD thesis.
+
 ## Abstract {-}
 ```{r abstract, child=here::here('front-and-back-matter/_abstract.Rmd')}
 ```
-
 
 ## Acknowledgments {-}
 ```{r acknowledgments, child=here::here('front-and-back-matter/_acknowledgements.Rmd')}
