--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 ## thesis metadata ##
 #####################
 title: |
-  Targeted HIV intervention with Bayesian spatio-temporal statistics
+  Bayesian spatio-temporal statistics for targetted HIV interventions
 author: Adam Howes
 university: Imperial College London
 university-logo: templates/ic-small.pdf
@@ -14,7 +14,7 @@ abstract: |
   `r paste(readLines("front-and-back-matter/_abstract.Rmd"), collapse = '\n  ')`
 acknowledgements: |
   `r paste(readLines("front-and-back-matter/_acknowledgements.Rmd"), collapse = '\n  ')`
-dedication: For Yihui Xie
+dedication: For $\sum_i u_i$
 abbreviations: "front-and-back-matter/abbreviations" # path to .tex file with abbreviations
 notations: "front-and-back-matter/notations"
 
@@ -87,12 +87,12 @@ bibliography-heading-in-pdf: Works Cited
 
 # biblatex options #
 # unless you run into 'biber' error messages, use natbib as it lets you customise your bibliography directly
-use-biblatex: false
+use-biblatex: true
 bib-latex-options: "style=authoryear, sorting=nyt, backend=biber, maxcitenames=2, useprefix, doi=true, isbn=false, uniquename=false" #for science, you might want style=numeric-comp, sorting=none for numerical in-text citation with references in order of appearance
 
 # natbib options #
 # natbib runs into fewer errors than biblatex, but to customise your bibliography you need to fiddle with .bst files
-use-natbib: true # to use natbib, set this to true, and change "output:bookdown::pdf_book:citation_package:" to "natbib"
+use-natbib: false # to use natbib, set this to true, and change "output:bookdown::pdf_book:citation_package:" to "natbib"
 natbib-citation-style: authoryear #for science, you might want numbers,square
 natbib-bibliography-style: ACM-Reference-Format #or plainnat or some .bst file you download
 
