--- a/references.bib
+++ b/references.bib
@@ -1,65 +1,400 @@
-@book{Darwin1859,
-address = {London},
-author = {Darwin, Charles},
-publisher = {John Murray},
-title = {{On the Origin of Species by Means of Natural Selection or the Preservation of Favoured Races in the Struggle for Life}},
-year = {1859}
+@article{rue2009approximate,
+  title={{Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations}},
+  author={Rue, H{\aa}vard and Martino, Sara and Chopin, Nicolas},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={71},
+  number={2},
+  pages={319--392},
+  year={2009},
+  publisher={Wiley Online Library}
 }
 
-@book{von_goethe_wilhelm_1829,
-	title = {Wilhelm {Meisters} {Wanderjahre} oder die {Entsagenden}},
-	shorttitle = {Werke},
-	language = {de},
-	publisher = {Cotta},
-	author = {von Goethe, Johann Wolfgang},
-	year = {1829}
+@book{blangiardo2015spatial,
+  title={{Spatial and spatio-temporal Bayesian models with R-INLA}},
+  author={Blangiardo, Marta and Cameletti, Michela},
+  year={2015},
+  publisher={John Wiley \& Sons}
 }
 
-@article{Satchell2009,
-  author =        {Satchell, Christine and Dourish, Paul},
-  journal =       {Proceedings of the Annual Conference of the
-                   Australian Computer-Human Interaction Special
-                   Interest Group (OZCHI '09)},
-  number =        {November},
-  pages =         {9--16},
-  title =         {{Beyond The User: Use And Non-Use in HCI}},
-  year =          {2009},
-  doi =           {10.1145/1738826.1738829},
-  isbn =          {9781605588544},
-  issn =          {14712970},
-  url =           {http://douri.sh/publications/2009/nonuse-ozchi.pdf},
+@article{rue2007approximate,
+  title={{Approximate Bayesian inference for hierarchical Gaussian Markov random field models}},
+  author={Rue, H{\aa}vard and Martino, Sara},
+  journal={Journal of Statistical Planning and Inference},
+  volume={137},
+  number={10},
+  pages={3177--3192},
+  year={2007},
+  publisher={Elsevier}
 }
 
-@book{Wu2016,
-  author =        {Wu, Tim},
-  publisher =     {Knopf Publishing Group},
-  title =         {{The Attention Merchants: The Epic Scramble to Get
-                   Inside Our Heads}},
-  year =          {2016},
+@inproceedings{cseke2010improving,
+  title={{Improving posterior marginal approximations in latent Gaussian models}},
+  author={Cseke, Botond and Heskes, Tom},
+  booktitle={Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+  pages={121--128},
+  year={2010}
 }
 
-@article{Shea2014,
-  author =        {Shea, Nicholas and Boldt, Annika and Bang, Dan and
-                   Yeung, Nick and Heyes, Cecilia and Frith, Chris D},
-  journal =       {Trends in Cognitive Sciences},
-  number =        {4},
-  pages =         {186--193},
-  title =         {{Supra-personal cognitive control and metacognition}},
-  volume =        {18},
-  year =          {2014},
-  doi =           {10.1016/j.tics.2014.01.006},
-  issn =          {1364-6613},
-  url =           {http://dx.doi.org/10.1016/j.tics.2014.01.006},
+@article{fournier2012ad,
+  title={{AD Model Builder: using automatic differentiation for statistical inference of highly parameterized complex nonlinear models}},
+  author={Fournier, David A and Skaug, Hans J and Ancheta, Johnoel and Ianelli, James and Magnusson, Arni and Maunder, Mark N and Nielsen, Anders and Sibert, John},
+  journal={Optimization Methods and Software},
+  volume={27},
+  number={2},
+  pages={233--249},
+  year={2012},
+  publisher={Taylor \& Francis}
 }
 
-@inproceedings{Lottridge2012,
-  author =        {Lottridge, Danielle and Marschner, Eli and
-                   Wang, Ellen and Romanovsky, Maria and Nass, Clifford},
-  booktitle =     {Proceedings of the Human Factors and Ergonomics
-                   Society 56th Annual Meeting},
-  title =         {{Browser design impacts multitasking}},
-  year =          {2012},
-  doi =           {10.1177/1071181312561289},
-  isbn =          {9780945289418},
-  issn =          {10711813},
+@article{kristensen2016tmb,
+  title={TMB: Automatic Differentiation and Laplace Approximation},
+  author={Kristensen, Kasper and Nielsen, Anders and Berg, Casper W and Skaug, Hans and Bell, Bradley M and others},
+  journal={Journal of Statistical Software},
+  volume={70},
+  number={i05},
+  year={2016},
+  publisher={Foundation for Open Access Statistics}
+}
+
+@article{skaug2006automatic,
+  title={{Automatic approximation of the marginal likelihood in non-Gaussian hierarchical models}},
+  author={Skaug, Hans J and Fournier, David A},
+  journal={Computational Statistics \& Data Analysis},
+  volume={51},
+  number={2},
+  pages={699--709},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{tierney1986accurate,
+  title={{Accurate approximations for posterior moments and marginal densities}},
+  author={Tierney, Luke and Kadane, Joseph B},
+  journal={Journal of the American Statistical Association},
+  volume={81},
+  number={393},
+  pages={82--86},
+  year={1986},
+  publisher={Taylor \& Francis}
+}
+
+@article{eaton2019joint,
+  title={{Joint small-area estimation of HIV prevalence, ART coverage and HIV incidence}},
+  author={Eaton, Jeffrey W and Bajaj, Sumali and Jahn, Andreas and Kalua, Thokozani and Mganga, Andrew and Auld, Andrew F and Kim, Evelyn and Payne, Danielle and Shiraishi, Ray W and Gutreuter, Steve and Hallett, Timothy B and Johnson, Leigh F},
+  journal={Working paper},
+  year={2019}
+}
+
+@book{rue2005gaussian,
+  title={{Gaussian Markov random fields: theory and applications}},
+  author={Rue, Havard and Held, Leonhard},
+  year={2005},
+  publisher={CRC press}
+}
+
+@article{carpenter2017stan,
+  title={{Stan: A probabilistic programming language}},
+  author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+  journal={Journal of Statistical Software},
+  volume={76},
+  number={1},
+  year={2017},
+  publisher={Columbia Univ., New York, NY (United States); Harvard Univ., Cambridge, MA~…}
+}
+
+@article{baydin2017automatic,
+  title={{Automatic differentiation in machine learning: a survey}},
+  author={Baydin, At{\i}l{\i}m G{\"u}nes and Pearlmutter, Barak A and Radul, Alexey Andreyevich and Siskind, Jeffrey Mark},
+  journal={The Journal of Machine Learning Research},
+  volume={18},
+  number={1},
+  pages={5595--5637},
+  year={2017},
+  publisher={JMLR. org}
+}
+
+@article{spiegelhalter2007openbugs,
+  title={{OpenBUGS user manual, version 3.0. 2}},
+  author={Spiegelhalter, David and Thomas, Andrew and Best, Nicky and Lunn, Dave},
+  journal={MRC Biostatistics Unit, Cambridge},
+  year={2007}
+}
+
+@book{griewank2008evaluating,
+  title={{Evaluating derivatives: principles and techniques of algorithmic differentiation}},
+  author={Griewank, Andreas and Walther, Andrea},
+  volume={105},
+  year={2008},
+  publisher={Siam}
+}
+
+@article{bell2012cppad,
+  title={{CppAD: a package for C++ algorithmic differentiation}},
+  author={Bell, Bradley M},
+  journal={Computational Infrastructure for Operations Research},
+  volume={57},
+  number={10},
+  year={2012}
+}
+
+@article{spiegelhalter2002bayesian,
+  title={{Bayesian measures of model complexity and fit}},
+  author={Spiegelhalter, David J and Best, Nicola G and Carlin, Bradley P and Van Der Linde, Angelika},
+  journal={Journal of the Royal Statistical Society: Series B (statistical Methodology)},
+  volume={64},
+  number={4},
+  pages={583--639},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{gelman2014understanding,
+  title={{Understanding predictive information criteria for Bayesian models}},
+  author={Gelman, Andrew and Hwang, Jessica and Vehtari, Aki},
+  journal={Statistics and Computing},
+  volume={24},
+  number={6},
+  pages={997--1016},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{durrande2019banded,
+  title={Banded matrix operators for Gaussian Markov models in the automatic differentiation era},
+  author={Durrande, Nicolas and Adam, Vincent and Bordeaux, Lucas and Eleftheriadis, Stefanos and Hensman, James},
+  journal={arXiv preprint arXiv:1902.10078},
+  year={2019}
+}
+
+@article{martins2013bayesian,
+  title={{Bayesian computing with INLA: new features}},
+  author={Martins, Thiago G and Simpson, Daniel and Lindgren, Finn and Rue, H{\aa}vard},
+  journal={Computational Statistics \& Data Analysis},
+  volume={67},
+  pages={68--83},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{besag1991bayesian,
+  title={{Bayesian image restoration, with two applications in spatial statistics}},
+  author={Besag, Julian and York, Jeremy and Molli{\'e}, Annie},
+  journal={Annals of the Institute of Statistical Mathematics},
+  volume={43},
+  number={1},
+  pages={1--20},
+  year={1991},
+  publisher={Springer}
+}
+
+@article{besag1974spatial,  
+  title={{Spatial Interaction and the Statistical Analysis of Lattice Systems}},
+  author={Besag, Julian},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={36},
+  number={2},
+  pages={192--225},
+  year={1974},
+  publisher={Wiley Online Library}
+}
+
+@article{simpson2017penalising,
+  title={{Penalising model component complexity: A principled, practical approach to constructing priors}},
+  author={Simpson, Daniel and Rue, H{\aa}vard and Riebler, Andrea and Martins, Thiago G and S{\o}rbye, Sigrunn H and others},
+  journal={Statistical Science},
+  volume={32},
+  number={1},
+  pages={1--28},
+  year={2017},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{mcgovern2015using,
+  title={Using interviewer random effects to remove selection bias from HIV prevalence estimates},
+  author={McGovern, Mark E and B{\"a}rnighausen, Till and Salomon, Joshua A and Canning, David},
+  journal={BMC medical research methodology},
+  volume={15},
+  number={1},
+  pages={8},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{pacheco2020finding,
+  title={Finding hotspots: development of an adaptive spatial sampling approach},
+  author={Pacheco, Ricardo Andrade and Rerolle, Francois and Lemoine, Jean and Hernandez, Leda and Me{\"\i}t{\'e}, Aboulaye and Bibaut, Aurelien and van der Laan, Mark and Arnold, Benjamin and Sturrock, Hugh JW},
+  journal={medRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{bao2012new,
+  title={A new infectious disease model for estimating and projecting HIV/AIDS epidemics},
+  author={Bao, Le},
+  journal={Sexually transmitted infections},
+  volume={88},
+  number={Suppl 2},
+  pages={i58--i64},
+  year={2012},
+  publisher={BMJ Publishing Group Ltd}
+}
+
+@article{liu2020bayesian,
+  title={Bayesian model based spatiotemporal survey designs and partially observed log Gaussian Cox process},
+  author={Liu, Jia and Vanhatalo, Jarno},
+  journal={Spatial statistics},
+  volume={35},
+  pages={100392},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{flaxman2019bayesian,
+  author     = {Seth Flaxman},
+  title      = {Bayesian survey design: a new paradigm for social science research},
+  year       = {2019},
+  journal    = {CMStatistics Presentation},
+}
+
+@article{fay1979estimates,
+  title={{Estimates of income for small places: an application of James-Stein procedures to census data}},
+  author={Fay, Robert E and Herriot, Roger A},
+  journal={Journal of the American Statistical Association},
+  volume={74},
+  number={366a},
+  pages={269--277},
+  year={1979},
+  publisher={Taylor \& Francis}
+}
+
+@book{lohr2009sampling,
+  title={{Sampling: Design and Analysis}},
+  author={Lohr, Sharon L},
+  year={2009},
+  publisher={Nelson Education}
+}
+
+@incollection{berliner1996hierarchical,
+  title={{Hierarchical Bayesian Time Series Models}},
+  author={Berliner, L Mark},
+  booktitle={Maximum Entropy and Bayesian Methods},
+  pages={15--22},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{johnson2019spatially,
+  title={{A spatially discrete approximation to log-Gaussian Cox processes for modelling aggregated disease count data}},
+  author={Johnson, Olatunji and Diggle, Peter and Giorgi, Emanuele},
+  journal={Statistics in Medicine},
+  volume={38},
+  number={24},
+  pages={4871--4887},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{pfeffermann2013new,
+  title={{New Important Developments in Small Area Estimation}},
+  author={Pfeffermann, Danny and others},
+  journal={Statistical Science},
+  volume={28},
+  number={1},
+  pages={40--68},
+  year={2013},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{dwyer2019mapping,
+  title={{Mapping HIV prevalence in sub-Saharan Africa between 2000 and 2017}},
+  author={Dwyer-Lindgren, Laura and Cork, Michael A and Sligar, Amber and Steuben, Krista M and Wilson, Kate F and Provost, Naomi R and Mayala, Benjamin K and VanderHeide, John D and Collison, Michael L and Hall, Jason B and others},
+  journal={Nature},
+  volume={570},
+  number={7760},
+  pages={189--193},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{gneiting2007strictly,
+  title={Strictly proper scoring rules, prediction, and estimation},
+  author={Gneiting, Tilmann and Raftery, Adrian E},
+  journal={Journal of the American Statistical Association},
+  volume={102},
+  number={477},
+  pages={359--378},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
+@article{best2005comparison,
+  title={{A comparison of Bayesian spatial models for disease mapping}},
+  author={Best, Nicky and Richardson, Sylvia and Thomson, Andrew},
+  journal={Statistical Methods in Medical Research},
+  volume={14},
+  number={1},
+  pages={35--59},
+  year={2005},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@inproceedings{snoek2012practical,
+  title={{Practical Bayesian optimization of machine learning algorithms}},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2951--2959},
+  year={2012}
+}
+
+@inproceedings{movckus1975bayesian,
+  title={{On Bayesian methods for seeking the extremum}},
+  author={Mo{\v{c}}kus, Jonas},
+  booktitle={Optimization techniques IFIP technical conference},
+  pages={400--404},
+  year={1975},
+  organization={Springer}
+}
+
+@article{diaconis1988bayesian,
+  title={Bayesian numerical analysis},
+  author={Diaconis, Persi},
+  journal={Statistical Decision Theory and Related Topics IV},
+  volume={1},
+  pages={163--175},
+  year={1988}
+}
+
+@article{fournier2012ad,
+  title={AD Model Builder: using automatic differentiation for statistical inference of highly parameterized complex nonlinear models},
+  author={Fournier, David A and Skaug, Hans J and Ancheta, Johnoel and Ianelli, James and Magnusson, Arni and Maunder, Mark N and Nielsen, Anders and Sibert, John},
+  journal={Optimization Methods and Software},
+  volume={27},
+  number={2},
+  pages={233--249},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@misc{osgoodzimmerman2021statistical,
+      title={A Statistical Introduction to Template Model Builder: A Flexible Tool for Spatial Modeling}, 
+      author={Aaron Osgood-Zimmerman and Jon Wakefield},
+      year={2021},
+      eprint={2103.09929},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
+
+@book{welton2012evidence,
+  title={Evidence synthesis for decision making in healthcare},
+  author={Welton, Nicky and Sutton, Alexander J and Cooper, Nicola and Abrams, Keith R and Ades, AE},
+  volume={132},
+  year={2012},
+  publisher={John Wiley \& Sons}
+}
+
+@article{stringer2021fast,
+  title={Fast, Scalable Approximations to Posterior Distributions in Extended Latent Gaussian Models},
+  author={Stringer, Alex and Brown, Patrick and Stafford, Jamie},
+  journal={arXiv preprint arXiv:2103.07425},
+  year={2021}
 }
