27/04/2021 supervisor meeting update

--- a/01-stats.Rmd
+++ b/01-stats.Rmd
@@ -21,8 +21,10 @@ bibliography: references.bib
   * Common examples
 * Examples of models used in HIV inference which are close to being latent Gaussian models, but aren't, and hence can't be fit using INLA
   * Disaggregation models 
-  * Naomi and evidence synthesis models [Cite Naomi paper]
+  * Evidence synthesis models like Naomi [Cite Naomi paper]
   * Compartmental models
+  * ART attendance models
+  * Multinomial models like for district-level risk factors
 * Definition of extended latent Gaussian models [@stringer2021fast]
 * Approximate Bayesian inference methods
   * Markov chain Monte Carlo
@@ -31,5 +33,8 @@ bibliography: references.bib
   * Empirical Bayes
 * Particular properties of spatio-temporal models (and LGMs) which make INLA, if feasible, often the best option
 * The increasing popularity of empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical]
+* Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA)
+* Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd)
+
 
 <!-- How does the ecological fallacy relate to aggregated output models -->
