Add Naomi reference

--- a/01-stats.Rmd
+++ b/01-stats.Rmd
@@ -20,8 +20,8 @@ bibliography: references.bib
 * Definition of a latent Gaussian model [@rue2009approximate]
   * Common examples
 * Examples of models used in HIV inference which are close to being latent Gaussian models, but aren't, and hence can't be fit using INLA
-  * Disaggregation models 
-  * Evidence synthesis models like Naomi [Cite Naomi paper]
+  * Disaggregation models
+  * Evidence synthesis models like Naomi [@eaton2021naomi; @eaton2019joint]
   * Compartmental models
   * ART attendance models
   * Multinomial models like for district-level risk factors
