--- a/references.bib
+++ b/references.bib
@@ -398,3 +398,9 @@
   journal={arXiv preprint arXiv:2103.07425},
   year={2021}
 }
+
+@article{eaton2021naomi,
+  title={Naomi: A New Modelling Tool for Estimating HIV Epidemic Indicators at the District Level in Sub-Saharan Africa },
+  author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O’Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alex and Russell, Emma and Esra, Rachel and Dolan, Nicolas and Anifowoshe, Yusuf L and Fellows, Ian and Glaubius, Rob and Haeuser, Emily and Okonek, Taylor and Stover, John and Thomas, Matthew L and Wakefield, Jon and Wolock, Tim and Berry11, Jonathan and Sabala, Tomasz and Heard, Nate and Delgado, Stephen and Pantazis, Athena and Jahn, Andreas and Kalua, Thoko and Chimpandule, Tiwonge and Auld, Andrew and Kim, Evelyn and Payne, Danielle and Johnson, Leigh F and Fitzjohn, Rich and Wankyeki, Ian and Mahy, Mary and Shiraishi, Ray},
+  year={2021}
+}
