Biographical note about SAHSU

--- a/02-hiv.Rmd
+++ b/02-hiv.Rmd
@@ -38,3 +38,7 @@ documentclass: book
   * Screening and individual level risk characteristics e.g. Katherine's AGYW systematic review)
 * Interventions more likely to be demographic specific rather than geographic specific
   * If majority of difference in effectiveness depends on intervention type then demographic targeting may be more priority
+* Small-area estimation in health, epidemiology and environment
+  * Small-area Health Statistics Unit at Imperial set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small]. This research has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots
+
+<!-- The population strategy strategy of Geoffrey Rose https://en.wikipedia.org/wiki/Geoffrey_Rose_(epidemiologist) -->
