--- a/references.bib
+++ b/references.bib
@@ -404,3 +404,14 @@
   author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O’Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alex and Russell, Emma and Esra, Rachel and Dolan, Nicolas and Anifowoshe, Yusuf L and Fellows, Ian and Glaubius, Rob and Haeuser, Emily and Okonek, Taylor and Stover, John and Thomas, Matthew L and Wakefield, Jon and Wolock, Tim and Berry11, Jonathan and Sabala, Tomasz and Heard, Nate and Delgado, Stephen and Pantazis, Athena and Jahn, Andreas and Kalua, Thoko and Chimpandule, Tiwonge and Auld, Andrew and Kim, Evelyn and Payne, Danielle and Johnson, Leigh F and Fitzjohn, Rich and Wankyeki, Ian and Mahy, Mary and Shiraishi, Ray},
   year={2021}
 }
+
+@article{elliott1992small,
+  title={The Small Area Health Statistics Unit: a national facility for investigating health around point sources of environmental pollution in the United Kingdom.},
+  author={Elliott, Paul and Westlake, Andrew J and Hills, Michael and Kleinschmidt, Immo and Rodrigues, Laura and McGale, Paul and Marshall, Kay and Rose, Geoffrey},
+  journal={Journal of Epidemiology \& Community Health},
+  volume={46},
+  number={4},
+  pages={345--349},
+  year={1992},
+  publisher={BMJ Publishing Group Ltd}
+}
