--- a/01-stats.Rmd
+++ b/01-stats.Rmd
@@ -25,6 +25,7 @@ bibliography: references.bib
   * Compartmental models
   * ART attendance models
   * Multinomial models like for district-level risk factors
+* Other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using INLA
 * Definition of extended latent Gaussian models [@stringer2021fast]
   * Many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already. For example, for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$
   * For additive models, the only non-linearity is in the link function
@@ -37,6 +38,7 @@ bibliography: references.bib
 * The increasing popularity of empirical Bayes approaches, like Template Model Builder [@osgoodzimmerman2021statistical]
 * Adaptive Gauss Hermite quadrature (AGHQ), like the central composite design (CCD) and grid strategies, is one way to choose the hyper-parameter integration points in the integrated nested Laplace approximation (INLA)
 * Finn Lindgren is working on a method for non-linear predictors, called the [iterative INLA method](https://github.com/inlabru-org/inlabru/blob/55896f10d563c14e34cab577b29b733aac051f86/vignettes/method.Rmd)
+  * More [slides](https://informatique-mia.inrae.fr/reseau-resste/sites/default/files/2020-09/slides-Lindgren_Avignon2018.pdf) here
 * Thesis work of [Follestad](https://cds.cern.ch/record/639625/files/sis-2003-305.pdf) that stayed as a preprint
 
 <!-- How does the ecological fallacy relate to aggregated output models -->
