--- a/01-stats.Rmd
+++ b/01-stats.Rmd
@@ -25,6 +25,7 @@ bibliography: references.bib
   * Compartmental models
   * ART attendance models
   * Multinomial models like for district-level risk factors
+    * Multinomial logistic regression
 * Other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using INLA
 * Definition of extended latent Gaussian models [@stringer2021fast]
   * Many-to-one is not an issue for `R-INLA`, the latent field is implemented as a concatenation of many vectors already. For example, for $\eta_i = \beta_0 + \phi_i$ with $i = 1, \ldots, n$ the latent field is $(\eta_1, \ldots, \eta_n, \beta_0, \phi_1, \ldots, \phi_n)^\top$ of dimension $2n + 1$
