--- a/02-hiv.Rmd
+++ b/02-hiv.Rmd
@@ -26,12 +26,22 @@ documentclass: book
   * Conflicting information sources
   * Hard to reach populations
   * Demography, knowing the correct denominator
+* Phasing out of nationally-representative household surveys for HIV
+  * Importance of relying on multiple sources of information: evidence synthesis, Naomi, multivariate models
+  * Bayesian survey design
 * Key HIV indicators
   * HIV prevalence
   * HIV incidence
   * ART coverage
+  * Coverage of other interventions such as PrEP, PEP
 * Drivers of transmission
 * Possible interventions
+  * ART
+  * Condoms
+  * PrEP and PEP
+  * Education
+  * Economic empowerment
+  * VMMC
 * Geographic targeting versus demographic targeting
   * Hotspots
   * Key populations
@@ -42,5 +52,20 @@ documentclass: book
   * If majority of difference in effectiveness depends on intervention type then demographic targeting may be more priority
 * Small-area estimation in health, epidemiology and environment
   * The Small-Area Health Statistics Unit at Imperial was set-up to monitor health around point sources of environmental pollution in response to the Sellafield enquiry into the increased incidence of childhood leukemia leukaemia near a nuclear reprocessing plant [@elliott1992small]. This research has a focus on ratios of observed events to expected events, and testing hypothesis about hot-spots
+
+## 19th October meeting
+
+* Calculate empirical averages of categories (as for what to expect for category random effects)
+* Fit a single survey model for all categories
+* There are five countires where there exists good FSW data, fit the model there
+* Important to talk about what is going on with non-regular partners in South Africa
+* We will have more FSW data in future
+* Look to submit to e.g. Lancet Child & Adolescent Health or PLoS Global Health
+* Future work extending Laga et al. to use country elicited random error inflation, CFSW data, generalisation from countries with good survey data, in TMB or `aghq`
+* Results shouldn't change when the constraints change
+* Review posterior predictive estimates used for coverage
+* Look at including PHIA or MICS
+* Write a more extended version of the DHS survey questions
+* Take posterior of 3rd category and use some post-hoc procedure to get the 4th category 
 
 <!-- The population strategy strategy of Geoffrey Rose https://en.wikipedia.org/wiki/Geoffrey_Rose_(epidemiologist) -->
