--- a/02-hiv.Rmd
+++ b/02-hiv.Rmd
@@ -29,6 +29,10 @@ documentclass: book
 * Phasing out of nationally-representative household surveys for HIV
   * Importance of relying on multiple sources of information: evidence synthesis, Naomi, multivariate models
   * Bayesian survey design
+* Why isn't case-based surveillance included yet?
+  * There aren't individual linked databases and patient records have to be consolidated
+  * Passive case-based surveillance
+  * Post-hoc matching and create a case-based surveillance record
 * Key HIV indicators
   * HIV prevalence
   * HIV incidence
@@ -67,5 +71,7 @@ documentclass: book
 * Look at including PHIA or MICS
 * Write a more extended version of the DHS survey questions
 * Take posterior of 3rd category and use some post-hoc procedure to get the 4th category 
+
+
 
 <!-- The population strategy strategy of Geoffrey Rose https://en.wikipedia.org/wiki/Geoffrey_Rose_(epidemiologist) -->
