--- a/02-hiv.Rmd
+++ b/02-hiv.Rmd
@@ -72,6 +72,18 @@ documentclass: book
 * Write a more extended version of the DHS survey questions
 * Take posterior of 3rd category and use some post-hoc procedure to get the 4th category 
 
+## Clemens UNAIDS meeting
+
+* High prevalence and incidence is the main criteria for Global Fund priority
+* How can we develop an operational aid for using the spreadsheet as a programmatic planning tool? How should the information be used in practise?
+* How to find people within the district who fall under each category?
+* There is some non-zero contribution of not sexually active individuals to HIV incidence (e.g. drug injectors). Particularly if extend to men then might have to take it into account. In some countries the population of drug injectors is small but not neglible
+* How to capture the potential effects of interventions?
+* What is the development plan for including ABYM? Extension to adults aged 15-49?
+* Where is new technology required?
+* If a country has very old data should there be a warning about this?
+* Dependence of FSW on clustering and migration
+
 
 
 <!-- The population strategy strategy of Geoffrey Rose https://en.wikipedia.org/wiki/Geoffrey_Rose_(epidemiologist) -->
