Meeting with Seth discussing disease surveillance systems

--- a/90-fut.Rmd
+++ b/90-fut.Rmd
@@ -27,3 +27,10 @@ documentclass: book
 * Potential topics of interest
   * Wastewater surveillance
     * Connected to ecological regression (somehow)
+* Some of Seth's comments about surveillance
+  * [Swapnil's eClinicalMedicine paper](https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00344-8/fulltext)
+    * Symptom based testing S+ and random sampling S+, one is available a week or two earlier, different lags
+  * Varying levels of signal from varying signals
+  * What's representative, what's biased in different ways
+  * Big data paradox (bias decomposition identity)
+  * How are countries and labs incentivised to contribute to a global surveillance system? How to avoid punative measures for countries which report early e.g. ZAF for Omicron 
