Meeting with Elona (and NAO)

--- a/02-hiv.Rmd
+++ b/02-hiv.Rmd
@@ -77,13 +77,38 @@ documentclass: book
 * High prevalence and incidence is the main criteria for Global Fund priority
 * How can we develop an operational aid for using the spreadsheet as a programmatic planning tool? How should the information be used in practise?
 * How to find people within the district who fall under each category?
-* There is some non-zero contribution of not sexually active individuals to HIV incidence (e.g. drug injectors). Particularly if extend to men then might have to take it into account. In some countries the population of drug injectors is small but not neglible
+* There is some non-zero contribution of not sexually active individuals to HIV incidence (e.g. drug injectors). Particularly if extend to men then might have to take it into account. In some countries the population of drug injectors is small but not negligible
 * How to capture the potential effects of interventions?
 * What is the development plan for including ABYM? Extension to adults aged 15-49?
 * Where is new technology required?
 * If a country has very old data should there be a warning about this?
 * Dependence of FSW on clustering and migration
 
+## Elona meeting
 
+* Researcher at UCT. Working with young people.
+  * 1000+ long interviews of young people's lives
+  * Extracted data from the South Africa cohort
+* GF request for proposal for 3 year partnership. Bring together existing evidence (broad)
+  * Work with colleagues in 5 countries to refine their AGYW programming CMR, KEN, LSO, MOZ
+* How to take the data from the Naomi model and the data from spreadsheet to target interventions at a national level?
+* Jeff: Naomi estimates. Treatment, coverage, new infections. By district, age. Odds-ratios assumed to be the same. Incidence is a modelled outcome. Proportional to district level viremia. Age pattern of incidence based on incidence ratios from Spectrum.
+* Differential prevention. Differential risk.
+* What has the impact of DREAMS been?
+* VACs surveys (VACS survey sizes are very variable), MICS surveys
+* HIPS study: losing a parent
+* Risk categories we're using are really hard to pick up
+* Multi-outcome analysis Cluver Rudgard. Sherr. Food security, motherhood ad school enrollment
+* Pathway 1: schooling
+* Pathway 2: reducing income shocks, food insecurity
+* Leigh South Africa work
+* VACS data in LSO to say how well tackling the pathways does
+* Simulate interventions along the causal pathway
+* Pros and cons of more of less nuance in the risk category definitions
+* Exposure to national programming, poverty layers
+* Targetting vs access points into services
+* Implementation frameworks. Doesn't make sense to make recommendations which are not applicable
+* Actionable categories. School, healthcare
+* Work on one or two countries. Will at Oxford, Martina at Capetown
 
 <!-- The population strategy strategy of Geoffrey Rose https://en.wikipedia.org/wiki/Geoffrey_Rose_(epidemiologist) -->
