--- a/90-fut.Rmd
+++ b/90-fut.Rmd
@@ -22,6 +22,7 @@ documentclass: book
   * BDI
   * Samir Bhatt's group at Copenhagen
   * Turing-RSS Lab (Marta Blangiardo, Peter Diggle, Chris Holmes, Sylvia Richardson)
+  * Nucleic Acid Observatory (Kevin Esvelt, MIT)
 * Potential non-academic groups of interest
   * National Institute for Biological Standards and Control
 * Potential topics of interest
